# beam_santory_ml

./: README.md  config.py  pyproject.toml
app/: __init__.py  app.py
app/static/: script.js  style.css
app/templates/: error.html  index.html
app/views/: __init__.py  photo.py
frontend/: index.html  script.js  style.css
