[tool.poetry]
name = "beam-santory-ml"
version = "0.1.0"
description = ""
authors = ["marynag <mgrabchak1109@gmail.com>"]
readme = "README.md"
packages = [{include = "beam_santory_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
filetype = "^1.2.0"
ultralytics = "^8.0.158"
cython = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
